<resources>
    <string name="app_name">FitShaker</string>
    <string name="header">Twoja sesja</string>
    <string name="default_timer">00:00:00</string>
    <string name="default_cal">0.0</string>
    <string name="start_session">Start</string>
    <string name="stop_session">Stop</string>
    <string name="kcal">kCal</string>
    <string name="cal_format">%03.1f</string>
    <string name="delete_prompt">Czy na pewno  usunąć całą historię  twoich treningów?</string>
    <string name="no">Nie</string>
    <string name="confirm">Tak</string>
</resources>
