<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/rl"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="2dp"
    android:background="@android:color/darker_gray">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/delete_prompt"
        android:textColor="@android:color/primary_text_dark"
        android:id="@+id/prompt"
        android:textSize="25sp"
        android:layout_margin="15dp"
        android:elegantTextHeight="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:gravity="center"/>
    <Button
        android:id="@+id/confirmButton"
        android:layout_width="105dp"
        android:layout_height="55dp"
        android:text="@string/confirm"
        android:textColor="@android:color/primary_text_light"
        android:background="@android:drawable/btn_default"
        android:layout_below="@+id/prompt"
        android:layout_alignStart="@+id/prompt" />
    <Button
        android:id="@+id/declineButton"
        android:layout_width="105dp"
        android:layout_height="55dp"
        android:text="@string/no"
        android:textColor="@android:color/primary_text_light"
        android:background="@android:drawable/btn_default"
        android:layout_below="@+id/prompt"
        android:layout_alignEnd="@+id/prompt" />


</RelativeLayout>